--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,8 @@ buildscript {
         minSdkVersion = 21
         compileSdkVersion = 33
         targetSdkVersion = 33
-
+        googlePlayServicesVersion="20.4.1"
+          androidMapUtilsVersion="3.1.1"
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
     }
